--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/dm-sans": "^0.3.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/core": "^7.9.2",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "@react-navigation/stack": "^7.3.2",
     "expo": "^53.0.9",
+    "expo-splash-screen": "^0.30.8",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.8.1",
     "nativewind": "latest",
