--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "expo-splash-screen": "^0.30.8",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.8.1",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.2.0",
     "nativewind": "latest",
     "react": "19.0.0",
+    "react-i18next": "^15.5.3",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-progress": "^5.0.1",
