--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo-google-fonts/dm-sans": "^0.3.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/slider": "^4.5.7",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/core": "^7.9.2",
     "@react-navigation/material-top-tabs": "^7.3.0",
