--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/dm-sans": "^0.3.0",
+    "@expo/ngrok": "^4.1.3",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "^8.4.2",
     "@react-native-community/slider": "^4.5.7",
@@ -38,8 +39,8 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-tab-view": "^4.1.2",
-    "react-native-svg": "15.11.2"
+    "react-native-svg": "15.11.2",
+    "react-native-tab-view": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
