--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "@expo-google-fonts/dm-sans": "^0.3.0",
     "@expo/ngrok": "^4.1.3",
     "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-community/datetimepicker": "^8.4.2",
-    "@react-native-community/slider": "^4.5.7",
+    "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-community/slider": "4.5.6",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/core": "^7.9.2",
     "@react-navigation/material-top-tabs": "^7.3.0",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "@react-navigation/stack": "^7.3.2",
-    "expo": "^53.0.9",
-    "expo-splash-screen": "^0.30.8",
+    "expo": "53.0.19",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.8.1",
     "i18next": "^25.2.1",
@@ -31,14 +31,14 @@
     "nativewind": "latest",
     "react": "19.0.0",
     "react-i18next": "^15.5.3",
-    "react-native": "0.79.2",
+    "react-native": "0.79.5",
     "react-native-date-picker": "^5.0.13",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-tab-view": "^4.1.2"
   },
@@ -54,5 +54,15 @@
     "typescript": "~5.8.3"
   },
   "main": "node_modules/expo/AppEntry.js",
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "react-native-keyboard-aware-scroll-view"
+        ],
+        "listUnknownPackages": false
+      }
+    }
+  }
 }
