--- a/app.json
+++ b/app.json
@@ -24,7 +24,7 @@
     "androidStatusBar": {
       "barStyle": "dark-content",
       "backgroundColor": "#ffffff",
-      "translucent": false
+      "translucent": true
     },
     "ios": {
       "supportsTablet": true,
