--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@react-navigation/native-stack": "^7.3.13",
     "@react-navigation/stack": "^7.3.2",
     "expo": "53.0.19",
+    "expo-haptics": "~14.1.4",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.8.1",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.2.0",
+    "lucide-react-native": "^0.539.0",
     "nativewind": "latest",
     "react": "19.0.0",
     "react-i18next": "^15.5.3",
@@ -41,8 +43,7 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
-    "react-native-tab-view": "^4.1.2",
-    "expo-haptics": "~14.1.4"
+    "react-native-tab-view": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
