--- a/app.json
+++ b/app.json
@@ -6,14 +6,14 @@
     "scheme": "quassama",
     "platforms": ["ios", "android"],
     "web": {
-      "favicon": "./assets/Icon/logo1.png"
+      "favicon": "./assets/logo.png"
     },
     "experiments": {
       "tsconfigPaths": true
     },
     "plugins": ["expo-splash-screen"],
     "orientation": "portrait",
-    "icon": "./assets/Icon/logo1.png",
+    "icon": "./assets/logo.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
@@ -30,7 +30,7 @@
       "package": "com.quassama.app",
       "versionCode": 11,
       "adaptiveIcon": {
-        "foregroundImage": "./assets/Icon/logo1.png",
+        "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       }
     },
