--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "@react-navigation/stack": "^7.3.2",
-    "expo": "53.0.19",
+    "expo": "53.0.22",
+    "expo-device": "~7.1.4",
     "expo-haptics": "~14.1.4",
+    "expo-notifications": "~0.31.4",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.8.1",
