--- a/package.json
+++ b/package.json
@@ -13,50 +13,54 @@
   "dependencies": {
     "@expo-google-fonts/dm-sans": "^0.3.0",
     "@expo/ngrok": "^4.1.3",
-    "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-community/datetimepicker": "8.4.1",
-    "@react-native-community/slider": "4.5.6",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-community/slider": "5.0.1",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/core": "^7.9.2",
     "@react-navigation/material-top-tabs": "^7.3.0",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "@react-navigation/stack": "^7.3.2",
-    "expo": "53.0.22",
-    "expo-device": "~7.1.4",
-    "expo-haptics": "~14.1.4",
-    "expo-notifications": "~0.31.4",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
+    "expo": "^54.0.2",
+    "expo-device": "~8.0.7",
+    "expo-haptics": "~15.0.7",
+    "expo-notifications": "~0.32.11",
+    "expo-splash-screen": "~31.0.9",
+    "expo-status-bar": "~3.0.8",
     "firebase": "^11.8.1",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react-native": "^0.539.0",
     "nativewind": "latest",
-    "react": "19.0.0",
+    "react": "19.1.0",
     "react-i18next": "^15.5.3",
-    "react-native": "0.79.5",
+    "react-native": "0.81.4",
     "react-native-date-picker": "^5.0.13",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-pager-view": "6.7.1",
+    "react-native-pager-view": "6.9.1",
     "react-native-progress": "^5.0.1",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
-    "react-native-tab-view": "^4.1.2"
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-tab-view": "^4.1.2",
+    "react-native-worklets": "^0.5.1",
+    "expo-auth-session": "~7.0.8",
+    "expo-crypto": "~15.0.7",
+    "expo-secure-store": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~19.0.10",
+    "@types/react": "~19.1.10",
     "eslint": "^9.25.1",
-    "eslint-config-expo": "^9.2.0",
+    "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^10.1.2",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.0",
-    "typescript": "~5.8.3"
+    "typescript": "~5.9.2"
   },
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
