--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo-google-fonts/dm-sans": "^0.3.0",
     "@expo/ngrok": "^4.1.3",
+    "@gorhom/bottom-sheet": "^5.2.6",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/slider": "5.0.1",
@@ -23,9 +24,14 @@
     "@react-navigation/native-stack": "^7.3.13",
     "@react-navigation/stack": "^7.3.2",
     "expo": "^54.0.2",
+    "expo-audio": "^1.0.11",
+    "expo-auth-session": "~7.0.8",
+    "expo-av": "^16.0.7",
+    "expo-crypto": "~15.0.7",
     "expo-device": "~8.0.7",
     "expo-haptics": "~15.0.7",
     "expo-notifications": "~0.32.11",
+    "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.9",
     "expo-status-bar": "~3.0.8",
     "firebase": "^11.8.1",
@@ -46,10 +52,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-tab-view": "^4.1.2",
-    "react-native-worklets": "^0.5.1",
-    "expo-auth-session": "~7.0.8",
-    "expo-crypto": "~15.0.7",
-    "expo-secure-store": "~15.0.7"
+    "react-native-worklets": "^0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
