--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-haptics": "~15.0.7",
     "expo-notifications": "~0.32.11",
     "expo-secure-store": "~15.0.7",
+    "expo-sharing": "^14.0.7",
     "expo-splash-screen": "~31.0.9",
     "expo-status-bar": "~3.0.8",
     "firebase": "^11.8.1",
