--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-av": "^16.0.7",
     "expo-crypto": "~15.0.7",
     "expo-device": "~8.0.7",
+    "expo-file-system": "^19.0.14",
     "expo-haptics": "~15.0.7",
     "expo-notifications": "~0.32.11",
     "expo-secure-store": "~15.0.7",
