--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/native-stack": "^7.3.13",
     "@react-navigation/stack": "^7.3.2",
     "expo": "^54.0.2",
+    "expo-apple-authentication": "^8.0.7",
     "expo-audio": "^1.0.11",
     "expo-auth-session": "~7.0.8",
     "expo-av": "^16.0.7",
