--- a/app.json
+++ b/app.json
@@ -28,8 +28,7 @@
           "iosDisplayInForeground": true
         }
       ],
-      "expo-secure-store",
-      "expo-apple-authentication"
+      "expo-secure-store"
     ],
     "orientation": "portrait",
     "icon": "./assets/logo.png",
@@ -57,7 +56,7 @@
     },
     "android": {
       "package": "com.quassama.app",
-      "versionCode": 12,
+      "versionCode": 13,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
