--- a/app.json
+++ b/app.json
@@ -44,6 +44,7 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.quassama.app",
+      "buildNumber": "2",
       "infoPlist": {
         "UIBackgroundModes": [
           "remote-notification",
@@ -71,8 +72,7 @@
         "MODIFY_AUDIO_SETTINGS",
         "android.permission.RECORD_AUDIO",
         "android.permission.MODIFY_AUDIO_SETTINGS"
-      ],
-      "useNextNotificationsApi": true
+      ]
     },
     "extra": {
       "eas": {
