--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "expo-crypto": "~15.0.7",
     "expo-device": "~8.0.7",
     "expo-file-system": "^19.0.14",
-    "expo-haptics": "~15.0.7",
+  "expo-haptics": "~15.0.7",
+  "expo-linear-gradient": "~13.0.2",
     "expo-notifications": "~0.32.11",
     "expo-secure-store": "~15.0.7",
     "expo-sharing": "^14.0.7",
@@ -48,7 +49,8 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "6.9.1",
-    "react-native-progress": "^5.0.1",
+  "react-native-progress": "^5.0.1",
+  "react-native-calendars": "^1.1305.0",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
